--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,7 @@
-log4j.rootCategory=WARN, CONSOLE
+# Root logger option
+log4j.rootLogger=WARN, CONSOLE
+
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=[%d{ABSOLUTE} %-5p %c{1}]: %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=[%d{MM-dd-yyyy HH:mm:ss,SSS}][%t][%-5p]%-20.20c: %m%n
 log4j.logger.com.demo=DEBUG
