--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,9 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.5.1</version>
             <configuration>
+                <compilerArgs>
+                    <arg>-g</arg>
+                </compilerArgs>
                 <verbose>true</verbose>
                 <fork>true</fork>
                 <compilerVersion>${java.version}</compilerVersion>
