cxf log OFF, CONSOLE

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,18 @@
+log4j.debug=true
+
 # Root logger option
 log4j.rootLogger=INFO, CONSOLE
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=[%d{MM-dd-yyyy HH:mm:ss,SSS}][%t][%-5p]%-20.20c: %m%n
-log4j.logger.com.demo=DEBUG
+log4j.appender.CONSOLE.layout.ConversionPattern=[%d{MM-dd-yyyy HH:mm:ss,SSS}][%t][%-5p]%-50.100c: %m%n
+
+log4j.logger.com.demo=ALL
+
+# Log to a different Appender ...
+#log4j.logger.org.apache.cxf.services.OrderProcessService.OrderProcessPort.OrderProcess=DEBUG, CONSOLE
+#log4j.additivity.org.apache.cxf.services.OrderProcessService.OrderProcessPort.OrderProcess=false
+
+log4j.logger.org.apache.cxf.services.OrderProcessService=OFF, CONSOLE
+log4j.additivity.org.apache.cxf.services.OrderProcessService=false
+
